--- a/src/app/change-type-modal/change-type-modal.component.html
+++ b/src/app/change-type-modal/change-type-modal.component.html
@@ -13,8 +13,11 @@
         <div class="control-field">
           <mat-form-field class="cs-input cs-multi-select">
             <mat-select  placeholder="Type"  name="user_type" [(ngModel)]="userType.user_type" #user_type="ngModel" required>
-              <mat-option [value] ="1" >Plumber</mat-option>
-              <mat-option [value] ="2">Retailer</mat-option>
+              <mat-option [value] ="1" >Carpenter</mat-option>
+              <mat-option [value] ="2">Masons</mat-option>
+              <mat-option [value] ="3">Fabricator</mat-option>
+              <mat-option [value] ="4">Architect</mat-option>
+
             </mat-select>
           </mat-form-field> 
         </div>
