--- a/src/app/contractor/contractor-list/contractor-list.component.html
+++ b/src/app/contractor/contractor-list/contractor-list.component.html
@@ -67,7 +67,7 @@
               <th class="w50">&nbsp;</th>
               <th class="w150">Date</th>
               <th class="w200">Company Name </th>
-              <th class="w150">Retailer Mobile No.</th>
+              <th class="w150"> Mobile No.</th>
               <th class="w200">Distributor Detail</th>
               <th class="w160 text-center">Total Item</th>
               <th class="w80 text-center">Qty.</th>
