--- a/src/app/dealer/dealer-add/dealer-add.component.html
+++ b/src/app/dealer/dealer-add/dealer-add.component.html
@@ -105,7 +105,7 @@
                                             <div>
                                                 <mat-form-field class=" cs-input ">
                                                     <input matInput placeholder="Pincode"
-                                                    (input)="getaddress(karigarform.pincode)" maxlength="6" minlength="6"
+                                                    (input)="getaddress(karigarform.pincode)" (keypress)="numeric_Number($event)" maxlength="6" minlength="6"
                                                     name="pincode" [(ngModel)]="karigarform.pincode"
                                                     #pincode="ngModel" required>
                                                 </mat-form-field>
@@ -343,7 +343,10 @@
                                 <div class="cs-file file-up" >
                                     <label style="border: 1px dashed #131313;">
                                         <input type="file" (change)="onUploadChange($event)" style="display:none;" accept=".png, .jpg, .jpeg, .pdf"  />
-                                        <img  [src]="docId ? uploadUrl+karigarform.document_image : karigarform.document_image" alt="" id="img" *ngIf="karigarform.document_image != ''">
+                                        <img  [src]="docId ? uploadUrl+karigarform.document_image : karigarform.document_image" alt="" id="img" *ngIf="karigarform.document_image">
+                                        <span class="cancel-icon">
+                                            <!-- <i class="material-icons crose-icon" (click)="removeImage()">clear</i> -->
+                                          </span>
                                         <i class="material-icons add-file-icon" >add</i>
                                     </label>
 
@@ -351,6 +354,9 @@
                                         <input type="file" (change)="onUploadBack($event)" style="display:none;" accept=".png, .jpg, .jpeg" multiple />
                                         <!-- <img  [src]="karigarform.document_image" alt="" id="img"> -->
                                         <img src="{{back_doc_id ? uploadUrl+karigarform.document_image_back : karigarform.document_image_back}}" *ngIf="karigarform.document_image_back">
+                                        <span class="cancel-icon">
+                                            <!-- <i class="material-icons crose-icon" (click)="removebackImage()">clear</i> -->
+                                          </span>
                                         <i class="material-icons add-file-icon" >add</i>
                                     </label>
                                     
@@ -399,7 +405,7 @@
                 <div class="option-field">
                     <div class="control-field">
                         <mat-form-field class="cs-input">
-                            <input matInput placeholder="Account No." name="account_no" [(ngModel)] = "karigarform.account_no" minlength="8" maxlength="16" #account_no="ngModel">
+                            <input matInput  placeholder="Account No." name="account_no" (keypress)="numeric_Number($event)" [(ngModel)] = "karigarform.account_no" minlength="8" maxlength="16" #account_no="ngModel">
                         </mat-form-field>  
                     </div>
                 </div>
