--- a/src/app/master/sales-executive/sales-executive.component.html
+++ b/src/app/master/sales-executive/sales-executive.component.html
@@ -229,7 +229,7 @@
     <div class="side-bg" (click)="toggle = !toggle"></div>
 </div>
 
-<div class="excel-btn" (click)="exportproductCategory()" style="right: 85px;">
+<div class="excel-btn" (click)="exportsalesuser()" style="right: 85px;">
     <div class="image-area">
         <a>
             <img src="assets/excel.svg">
