--- a/src/app/master/video/video.component.html
+++ b/src/app/master/video/video.component.html
@@ -39,6 +39,8 @@
                 <li routerLink="/referral-master" routerLinkActive="active"><a>Points Master</a></li>
                 <li routerLink="/app-banner-list" routerLinkActive="active"><a>App Banner</a></li>
                 <li routerLink="/gifts" routerLinkActive="active"><a>Master Gift</a></li>
+                <li routerLink="/system-user-list" routerLinkActive="active"><a>System User</a></li>
+
 
                 <!-- <li routerLink="/message-history" routerLinkActive="active"><a>Message History</a></li> -->
                 <!-- <li routerLink="/notification-history" routerLinkActive="active"><a>Notification History</a></li> -->
