--- a/src/app/distributor/distributor-add/distributor-add.component.html
+++ b/src/app/distributor/distributor-add/distributor-add.component.html
@@ -44,7 +44,7 @@
                                                 </div>
                                             </div> -->
 
-                                            <div class="col s3">
+                                            <div class="col s4">
                                                 <div class="control-field">
                                                     <mat-form-field class="cs-input">
                                                         <input matInput placeholder="First Name" name="first_name"
@@ -53,7 +53,7 @@
                                                     </mat-form-field>
                                                 </div>
                                             </div>
-                                            <div class="col s3">
+                                            <div class="col s4">
                                                 <div class="control-field">
                                                     <mat-form-field class="cs-input">
                                                         <input matInput placeholder="Last Name" name="last_name"
@@ -64,7 +64,7 @@
 
 
 
-                                            <div class="col s3">
+                                            <div class="col s4">
                                                 <div class="control-field">
                                                     <mat-form-field class="cs-input">
                                                         <input matInput placeholder="Mobile No."
@@ -75,30 +75,18 @@
                                                 </div>
                                             </div>
 
-                                            <div class="col s3">
+                                            <!-- <div class="col s3">
                                                 <div class="control-field">
                                                     <mat-form-field class="cs-input">
                                                         <input matInput placeholder="Email" name="email"
                                                             [(ngModel)]="karigarform.email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" #email="ngModel">
                                                     </mat-form-field>
-                                                    <!-- <p *ngIf="email.errors?.pattern && f.form.valid" style="color:red">Invalid Email</p> -->
-                                                </div>
-                                            </div>
-
-                                            
-                                            <!-- <div class="col s6">
-                                                <div class="control-field">
-                                                    <mat-form-field class="cs-input">
-                                                        <input placeholder="D.O.B" class="h46"
-                                                            [(ngModel)]="karigarform.dob"
-                                                            (click)="openDatePicker(picker)" [max]="date1" name="dob"
-                                                            matInput [matDatepicker]="picker" required readonly>
-                                                        <mat-datepicker-toggle matSuffix [for]="picker">
-                                                        </mat-datepicker-toggle>
-                                                        <mat-datepicker #picker></mat-datepicker>
-                                                    </mat-form-field>
+                                                    <p *ngIf="email.errors?.pattern && f.form.valid" style="color:red">Invalid Email</p>
                                                 </div>
                                             </div> -->
+
+                                            
+                                        
 
                                         </div>
                                     </div>
@@ -113,7 +101,7 @@
                                                 <div>
                                                     <mat-form-field class=" cs-input ">
                                                         <input matInput placeholder="Pincode"
-                                                             (input)="getaddress(karigarform.pincode)" maxlength="6"
+                                                             (input)="getaddress(karigarform.pincode)" (keypress)="numeric_Number($event)" maxlength="6"
                                                             minlength="6" name="pincode"
                                                             [(ngModel)]="karigarform.pincode" #pincode="ngModel"
                                                             required>
