--- a/src/app/distributor/distributor-list/distributor-list.component.html
+++ b/src/app/distributor/distributor-list/distributor-list.component.html
@@ -8,14 +8,14 @@
         <div class="tab-header">
             <div class="tabs-list gift-tab-list">
                 <ul>
-                    <li (click)="filter = {};filter.status = 'All'; getDistributorList('')"
+                    <!-- <li (click)="filter = {};filter.status = 'All'; getDistributorList('')"
                         [ngClass]="{'active': filter.status == 'All'}">
                         <a>
                             <p>All</p>
                             <span>{{ distributor_all }}</span>
                         </a>
-                    </li>
-                    <li (click)="filter = {};filter.status = 'Active'; getDistributorList('')"
+                    </li> -->
+                    <!-- <li (click)="filter = {};filter.status = 'Active'; getDistributorList('')"
                         [ngClass]="{'active': filter.status == 'Active'}">
                         <a>
                             <p>ACTIVE</p>
@@ -29,7 +29,7 @@
                             <p>DEACTIVE</p>
                             <span class="request-bg">{{ distributor_deactive }}</span>
                         </a>
-                    </li>
+                    </li> -->
 
                     <!-- <li (click)="filter = {};filter.status = 'Reject'; getDistributorList('')" [ngClass]="{'active': filter.status == 'Reject'}">
                       <a>
@@ -55,9 +55,9 @@
                         search
                     </i>
                 </div>
-                <div class="master-btn pl15">
+                <!-- <div class="master-btn pl15">
                     <button mat-raised-button color="primary" (click)="openDatepicker()">Date Filter</button>
-                </div>
+                </div> -->
             </div>
 
             <div class="refresh-btn">
@@ -67,9 +67,7 @@
 
             <div class="top-pagination">
 
-                <!-- <div class="master-btn pr15">
-                    <button mat-button routerLink="/distributor-add" routerLinkActive="active">ADD Distributor</button>
-                </div> -->
+             
 
                 <ul
                     *ngIf="(filter.status == 'All' && distributor_all ) || (filter.status == 'Deactive' && distributor_deactive ) || (filter.status == 'Active' && distributor_active )   ">
@@ -86,17 +84,13 @@
                                 class="material-icons">keyboard_arrow_right</i></button></li>
                     <li><button mat-button matTooltip="Last Page" class="last-btn" (click)='last1()'>Last</button></li>
                 </ul>
-                <!-- <div class="master-btn ml20" *ngIf="assign_arr.length > 0 || select_all">
-                  <button style="background: #38b1ec;;" mat-button (click)="opensendmessage()">Send Message</button>
-              </div> -->
+                
                 <div class="master-btn ml20" *ngIf="assign_arr.length > 0 || select_all">
                     <button style="background: #6daf24;;" mat-button (click)="opensendnitification(3)">Send
                         Notification</button>
                 </div>
 
-                <!-- <div class="master-btn m120" *ngIf="assign_arr.length >0 || select_all">
-                  <button style="background: #5b5f56;" mat-button (click)="convertType()">Convert into Dealer</button>
-              </div> -->
+               
             </div>
         </div>
 
@@ -105,22 +99,22 @@
                 <div class="header">
                     <table>
                         <tr>
-                            <td class="w30 text-center"></td>
+                            <!-- <td class="w30 text-center"></td> -->
                          
-                            <th class="w30">&nbsp;</th>
+                            <th class="w30">S no.</th>
                          
-                            <th class="w150">Date</th>
+                            <th class="w100">Date</th>
                             <th class="w100">First Name</th>
                             <!-- <th class="w150">Contact Person</th> -->
                             <th class="w100">Mobile</th>
-                            <th class="w135">State</th>
-                            <th class="w135">District</th>
+                            <th class="w120">State</th>
+                            <th class="w120">District</th>
                             <!-- <th class="w150">Email</th> -->
                            
                             <!-- <th class="w135">City</th> -->
                             <!-- <th class="w135">Pincode</th> -->
                             <!-- <th class="w135">Address</th> -->
-                            <!-- <th class="w135">Status</th> -->
+                            <th class="w50">Action</th>
                         </tr>
                     </table>
                 </div>
@@ -128,11 +122,11 @@
                 <div class="header border-bott">
                     <table>
                         <tr>
-                             <th class="w30">&nbsp;</th> 
-                            <th class="w30">&nbsp;</th> 
+                             <!-- <th class="w30">&nbsp;</th>  -->
+                            <th class="w30"></th> 
                       
 
-                            <th class="w150"></th> 
+                            <th class="w100"></th> 
                              <th class="w100">
                                 <div class="search-form">
                                     <input type="text" placeholder="Name" [(ngModel)]="filter.first_name"
@@ -141,14 +135,7 @@
                                 </div>
                             </th> 
 
-                            <!-- <th class="w150">
-                                <div class="search-form">
-                                    <input type="text" placeholder="Contact Person"
-                                        [(ngModel)]="filter.parent_counter_contact_person"
-                                        (keyup.enter)="current_page = 1;getDistributorList('')">
-                                    <i class="material-icons">search</i>
-                                </div>
-                            </th> -->
+                          
 
                             <th class="w100">
                                 <div class="search-form">
@@ -157,16 +144,9 @@
                                     <i class="material-icons">search</i>
                                 </div>
                             </th>
-<!-- 
-                            <th class="w150">
-                                <div class="search-form">
-                                    <input type="text" placeholder="Email" [(ngModel)]="filter.search_name"
-                                        (keyup.enter)="current_page = 1;getDistributorList('')">
-                                    <i class="material-icons">search</i>
-                                </div>
-                            </th> -->
 
-                            <th class="w135">
+
+                            <th class="w120">
                                 <div class="search-form">
                                     <input type="text" placeholder="State" [(ngModel)]="filter.state"
                                         (keyup.enter)="current_page = 1;getDistributorList('')">
@@ -174,7 +154,7 @@
                                 </div>
                             </th>
 
-                            <th class="w135">
+                            <th class="w120">
                                 <div class="search-form">
                                     <input type="text" placeholder="District" [(ngModel)]="filter.district"
                                         (keyup.enter)="current_page = 1;getDistributorList('')">
@@ -182,30 +162,7 @@
                                 </div>
                             </th>
 
-                            <!-- <th class="w135">
-                                <div class="search-form">
-                                    <input type="text" placeholder="City" [(ngModel)]="filter.city"
-                                        (keyup.enter)="current_page = 1;getDistributorList('')">
-                                    <i class="material-icons">search</i>
-                                </div>
-                            </th> -->
-
-                            <!-- <th class="w135">
-                                <div class="search-form">
-                                    <input type="numeric_Number" placeholder="Pincode" [(ngModel)]="filter.pincode"
-                                        (keyup.enter)="current_page = 1;getDistributorList('')">
-                                    <i class="material-icons">search</i>
-                                </div>
-                            </th> -->
-
-                            <!-- <th class="w135">
-                            <div class="search-form">
-                                <input type="text" placeholder="Address" [(ngModel)]="filter.address"  (keyup.enter)="current_page = 1;getDistributorList('')">
-                                <i class="material-icons">search</i>
-                            </div> 
-                            </th> -->
-
-                             <!-- <th class="w135"></th>  -->
+                             <th class="w50"></th> 
                         </tr>
                     </table>
                 </div>
@@ -218,9 +175,8 @@
             <div class="table-body">
                 <table>
                     <tr *ngFor="let val of distributors; let i = index">
-                        <td class="w30 text-center" style="border-right: 0px !important;"></td>
                         <td class="w30">{{ ( (current_page - 1 ) * 20 ) + ( i+1 ) }}</td>
-                        <td class="w150">
+                        <td class="w100">
                             <ng-container *ngIf="val.date_created  != '0000-00-00 00:00:00' ">
                                 {{val.date_created | date: 'dd MMM yyyy'}}
                             </ng-container>
@@ -228,31 +184,16 @@
                       <td class="w100">
                         <a class="blue" routerLink="/distributor-detail/{{val.id}}/{{current_page}}"
                                 (click)="set_filter(filter)" routerLinkActive="active">{{val.first_name | titlecase }} {{val.last_name | titlecase }}</a></td>
-
-                        <!-- <td class="w150"><a class="blue" routerLink="/distributor-detail/{{val.id}}/{{current_page}}"
-                                (click)="set_filter(filter)" routerLinkActive="active">{{val.company_name}}</a></td> -->
-
-                        <!-- <td class="w150">{{val.parent_counter_contact_person | titlecase}}</td> -->
+                      
                         <td class="w100">{{val.mobile_no}}</td>
-                        <!-- <td class="w150"> {{val.email}}</td> -->
-                        <td class="w135">{{val.state | titlecase }}</td>
-                        <td class="w135">{{val.district | titlecase }}</td>
-                        <!-- <td class="w135">{{val.city | titlecase }}</td> -->
-                        <!-- <td class="w135">{{val.pincode }}</td> -->
-                        <!-- <td class="w135">{{val.address | titlecase }}</td> -->
-                        <!-- <td class="w135">
-                            <div class="center">
-                                <select class="{{val.status}}" [name]="'status'+i" placeholder="Status"
-                                    [(ngModel)]="val.status" (change)="distributorStatus(i) ">
-                                    <option value="Active" style="color: var(--success) !important;">Active</option>
-                                    <option value="Deactive" style="color: #f00000;">Deactive</option>
+                        <td class="w120">{{val.state | titlecase }}</td>
+                        <td class="w120">{{val.district | titlecase }}</td>
 
-                                </select>
-                                <div class="over-sec">
-                                <i class="material-icons "  (click)="toggle = !toggle; editProduct(val.id,i)" >edit</i>
-                            </div>  
-                            </div>
-                        </td> -->
+                      
+                         <td class="w50 text-center">
+                            <i class="material-icons deactive"  (click)="deleteKarigar(val.id)" >delete_sweep</i>
+                            
+                        </td> 
                     </tr>
                 </table>
             </div>
