--- a/src/app/master/company-profile/company-profile.component.html
+++ b/src/app/master/company-profile/company-profile.component.html
@@ -27,6 +27,8 @@
         <li routerLink="/referral-master" routerLinkActive="active"><a>Points Master</a></li>
         <li routerLink="/app-banner-list" routerLinkActive="active"><a>App Banner</a></li>
         <li routerLink="/gifts" routerLinkActive="active"><a>Master Gift</a></li>
+       <li routerLink="/system-user-list" routerLinkActive="active"><a>System User</a></li>
+
       </ul>
     </div>
 
