--- a/src/app/site-list/site-list.component.html
+++ b/src/app/site-list/site-list.component.html
@@ -1,10 +1,6 @@
 
 <div class="main-container ">
-  <div class="loader" *ngIf = "loading_list">
-    <div class="loding-logo">
-      <mat-spinner></mat-spinner>
-    </div>
-  </div>
+  
   <div class="fixed">
     <div class="tab-header">
       <div class="tabs-list gift-tab-list">
@@ -70,16 +66,22 @@
       </div>
     </div>
 
+    <div class="loader" *ngIf="loading_list">
+      <div class="loding-logo">
+        <mat-spinner></mat-spinner>
+      </div>
+    </div>
+
     <div class="css-table hr-scroll-table">
       <div class="sticky-header">
         <div class="header">
           <table>
             <tr>
-              <th class="w40">&nbsp;</th>
+              <th class="w40">S no.</th>
               <th class="w100">Date Created</th>
               <th class="w100">Created By</th>
               <th class="w200">Site Address</th>
-              <th class="w180">Owner Detail</th>
+              <th class="w200">Owner Detail</th>
               <th class="w120">State</th>
               <th class="w120">District</th>
               <th class="w120">City</th>
@@ -87,10 +89,10 @@
               <!-- <th class="w150">Construction Type</th>
                 <th class="w150">Construction Stage</th> -->
                 <th class="w100 text-center">Site Potential(Bags)</th>
-                <th class="w150">Sales Executive Detail</th>
-                <th class="w150">Architect Detail</th>
+                <th class="w200">Sales Executive Detail</th>
+                <th class="w200">Architect Detail</th>
                 
-                <th class="w80">Status</th>
+                <!-- <th class="w80">Status</th> -->
                 <!-- <th class="w50 text-center">Action</th> -->
               </tr>
             </table>
@@ -99,7 +101,7 @@
           <div class="header border-bott">
             <table>
               <tr>
-                <th class="w40">&nbsp;</th>
+                <th class="w40"></th>
                 <th class="w100"></th>
                 <th class="w100"></th>
                 
@@ -109,7 +111,7 @@
                     <i class="material-icons">search</i>
                   </div>
                 </th>
-                <th class="w180">
+                <th class="w200">
                   <div class="search-form">
                     <input type="text" placeholder="Search..." [(ngModel)]="filter.site_owner_name"  (keyup.enter)="current_page = 1;getUserList('')">
                     <i class="material-icons">search</i>
@@ -141,41 +143,28 @@
                     <i class="material-icons">search</i>
                   </div>
                 </th>
-                <th class="w150 text-center">
+                <th class="w200 text-center">
                   <div class="search-form">
                     <input type="text" placeholder="Search..." [(ngModel)]="filter.sales_user_name"  (keyup.enter)="current_page = 1;getUserList('')">
                     <i class="material-icons">search</i>
                   </div>
                 </th>
-                <th class="w150 text-center">
+                <th class="w200 text-center">
                   <div class="search-form">
                     <input type="text" placeholder="Search..." [(ngModel)]="filter.architect_name"  (keyup.enter)="current_page = 1;getUserList('')">
                     <i class="material-icons">search</i>
                   </div>
                 </th>
                 
-                <th class="w80 ">
-                  <div class="form-area">
-                    <div class="slect mr0">
-                      <mat-form-field>
-                        <mat-label>Search</mat-label>
-                        <mat-select [(ngModel)]="filter.site_status" name="site_status" #site_status="ngModel" (selectionChange)="current_page = 1;getUserList('')">
-                          <mat-option value="">All</mat-option>
-                          <mat-option value="Active">Active</mat-option>
-                          <mat-option value="Deactive">Deactive</mat-option>
-                          
-                        </mat-select>
-                      </mat-form-field>
-                    </div>
-                  </div>
-                </th>
-                
+             
                 <!-- <th class="w50 text-center">Action</th> -->
               </tr>
             </table>
           </div>
         </div>
-        <div class="table-container"  *ngIf="site_locations.length">
+
+        <div class="css-table">
+            <div class="table-container"  *ngIf="site_locations.length">
           <div class="table-body">
             <table>
               <tr *ngFor="let val of site_locations; let i = index">
@@ -195,7 +184,7 @@
                   </ng-container>  
                 </td>
                 <td class="w200">{{val.address | titlecase}}</td>
-                <td class="w180">
+                <td class="w200">
                   <a class="blue" routerLink="/site-detail/{{val.id}}/{{current_page}}"  routerLinkActive="active">{{val.site_owner_name | titlecase}} - {{val.site_owner_contact}}</a>
                 </td>
                 <td class="w120">{{val.state}}</td>
@@ -205,20 +194,19 @@
                 <!-- <td class="w150">{{val.construction_type}}</td>
                   <td class="w150">{{val.stage}}</td> -->
                   <td class="w100 text-center">{{val.site_potential}}</td>
-                  <td class="w150">
+                  <td class="w200">
                     
                     <a class="blue" routerLink="/distributor-detail/{{val.sales_user_id}}/{{current_page}}"  routerLinkActive="active">                  
                       {{val.sales_user_name | titlecase}} 
                     </a>
                     - <strong>{{val.sales_user_mobile}}</strong>
                   </td>
-                  <td class="w150">
+                  <td class="w200">
                     <a class="blue" routerLink="/dealer-detail/{{val.architect_id}}/{{current_page}}"  routerLinkActive="active">                  
                       {{val.architect_name | titlecase}} 
                     </a>
                     - <strong>{{val.architect_contact}}</strong>
                   </td>
-                  <td class="w80">{{val.site_status}}</td>
                   
                   <!-- <td class="w50 text-center">
                     <div class="cs-action">
@@ -235,6 +223,10 @@
                 </table>
               </div>
             </div>
+
+        </div>
+      
+
 
             <div class="container-outer"  *ngIf="!loading_list && !site_locations.length && ( (filter.status == 'All' && dealer_all ) || (filter.status == 'Pending' && dealer_pending ) || (filter.status == 'Verified' && dealer_verified ) || (filter.status == 'Reject' && dealer_reject ) || (filter.status == 'Suspect' && dealer_suspect )   )">
               <div class="date-not">
